--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -579,6 +579,7 @@ $widget-danger:                         $danger !default;
 
 $atum-icon-font: "atum-icon-font" !default;
 
+$atmi-barcodes-pro: "\e9dc";
 $atmi-pick-pack: "\e9da";
 $atmi-stock-takes: "\e9db";
 $atmi-question: "\e9d9";
@@ -755,7 +756,6 @@ $atmi-poop: "\e98d";
 $atmi-power-switch: "\e98e";
 $atmi-printer: "\e98f";
 $atmi-pushpin: "\e990";
-$atmi-question: "\e9d9";
 $atmi-question-circle: "\e991";
 $atmi-redo: "\e992";
 $atmi-rocket: "\e993";
