--- a/assets/scss/organisms/pages/_settings.scss
+++ b/assets/scss/organisms/pages/_settings.scss
@@ -293,10 +293,6 @@
 			height: .68rem;
 		}
 	}
-	.btn.btn-danger.tool-runner {
-		padding-left: initial;
-		padding-right: initial;
-	}
 	
 	.atum-multi-checkbox-all {
 		display: block;
@@ -777,6 +773,10 @@
 				}
 			}
 			
+			input[type=text] {
+				max-width: 260px;
+			}
+			
 			.region-switcher, .range-remover {
 				display: flex;
 				flex-wrap: wrap !important;
@@ -791,11 +791,11 @@
 			.script-runner {
 				display: flex;
 				flex-wrap: nowrap;
+				gap: math.div($grid-gutter-width, 3);
 				
 				.tool-runner {
 					text-transform: uppercase;
 					font-size: 12px;
-					width: 110px;
 					height: 30px;
 					line-height: 1;
 				}
@@ -803,7 +803,6 @@
 				.atum-select2-container {
 					height: 30px;
 					padding-bottom: 8px;
-					margin-right: 5px;
 					
 					@include tablet-max {
 						width: 80%;
@@ -844,7 +843,6 @@
 				}
 				
 				.checkbox-wrapper {
-					margin-bottom: 20px;
 					margin-left: 14px;
 					line-height: 30px;
 					color: var(--atum-checkbox-label);
@@ -952,10 +950,6 @@
 				
 				button {
 					border-radius: 4px;
-				}
-				
-				input[type=number] {
-					margin-right: 15px;
 				}
 				
 			}
