--- a/assets/scss/atum-suppliers.scss
+++ b/assets/scss/atum-suppliers.scss
@@ -7,5 +7,7 @@
 @import "common/mixins";
 @import "common/breakpoints";
 
+@import "atoms/select2";
+
 @import "molecules/atum-footer";
 @import "molecules/meta-boxes";
