Fixed incompatibility with WP Activity Log that was preventing addon licenses from being activated

--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -648,7 +648,7 @@ html {
 					padding: 0.313rem 0.2rem;
 				}
 				
-				&.install-addon {
+				&.install-atum-addon {
 					background-color: $success;
 					border-color: $success;
 					
