--- a/assets/css/atum-addons-rtl.css
+++ b/assets/css/atum-addons-rtl.css
@@ -1,22 +1,10 @@
 /** 
  * ATUM Inventory Management for WooCommerce CSS 
- * @version 1.9.32 
+ * @version 1.9.33 
  * @author Be Rebel  
  *
  * Author URI: https://berebel.io 
  * License : ©2023 Stock Management Labs 
  */
 
- .atum-addons h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.atum-addons .theme .show-key {
-  right: auto;
-  left: 0;
-}
-.atum-addons .theme .theme-actions {
-  right: auto;
-}
-/*# sourceMappingURL=atum-addons-rtl.css.map */
+ .atum-addons h1{display:-webkit-box;display:-ms-flexbox;display:flex}.atum-addons .theme .show-key{right:auto;left:0}.atum-addons .theme .theme-actions{right:auto}
