--- a/assets/scss/molecules/_popovers.scss
+++ b/assets/scss/molecules/_popovers.scss
@@ -56,6 +56,14 @@
 			max-width: 317px;
 			min-width: 200px;
 		}
+		
+		~ .select2-container {
+			.select2-dropdown {
+				box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
+				border: 1px solid var(--gray-500) !important;
+				top: 3px;
+			}
+		}
 	}
 	
 	input {
