--- a/assets/css/atum-list.css
+++ b/assets/css/atum-list.css
@@ -3712,6 +3712,11 @@ tr.introjs-showElement > th {
             transform: rotate(360deg);
   }
 }
+@media all and (max-width: 480px) {
+  .help-guide-buttons {
+    margin-top: 0;
+  }
+}
 
 body.atum-show-help-markers .atum-help-marker {
   position: relative;
@@ -7017,9 +7022,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 .tablenav .actions {
   white-space: nowrap;
 }
-.tablenav .actions .show-filters {
-  display: none;
-}
 @media all and (max-width: 480px) {
   .tablenav .actions {
     white-space: inherit;
@@ -7040,37 +7042,6 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   .tablenav .actions.bulkactions input[type=submit] {
     width: 100%;
     margin-top: 10px !important;
-  }
-}
-.tablenav .show-filters-wrapper {
-  display: none;
-  width: 100%;
-  margin-top: 15px;
-  font-size: 15px;
-}
-.tablenav .show-filters-wrapper .btn {
-  font-size: 15px;
-}
-@media all and (max-width: 480px) {
-  .tablenav .show-filters-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .tablenav .show-filters-wrapper > span {
-    text-transform: uppercase;
-  }
-  .tablenav .show-filters-wrapper + .actions {
-    margin-top: 15px;
-  }
-  .tablenav .show-filters-wrapper + .actions .select2-container {
-    margin-bottom: 10px;
   }
 }
 .tablenav .tablenav-pages-container .btn {
@@ -7820,6 +7791,10 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   .atum-list-wrapper .search-box .table-style-buttons button, #posts-filter .search-box .table-style-buttons button {
     width: 44px;
     height: 44px;
+  }
+  .atum-list-wrapper .search-box .table-style-buttons button .atmi-wc-expand, #posts-filter .search-box .table-style-buttons button .atmi-wc-expand {
+    font-size: 19px;
+    top: 1px;
   }
   .atum-list-wrapper .search-box > .input-group, #posts-filter .search-box > .input-group {
     -webkit-box-flex: 1;
