--- a/assets/css/atum-orders-list.css
+++ b/assets/css/atum-orders-list.css
@@ -464,9 +464,9 @@ body .select2-container.atum-select2 .select2-search--inline .select2-search__fi
   -webkit-box-shadow: none;
           box-shadow: none;
 }
-body .select2-dropdown.atum-select2-dropdown {
-  -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
+body span.select2-dropdown.atum-select2-dropdown {
+  -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2) !important;
+          box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2) !important;
   background-color: var(--atum-table-bg) !important;
   border: 1px solid var(--gray-500);
   border-radius: 4px;
@@ -479,25 +479,25 @@ body .select2-dropdown.atum-select2-dropdown {
   width: 100%;
   z-index: 100000;
 }
-body .select2-dropdown.atum-select2-dropdown .select2-results__options {
+body span.select2-dropdown.atum-select2-dropdown .select2-results__options {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-body .select2-dropdown.atum-select2-dropdown .select2-results__options::-webkit-scrollbar {
+body span.select2-dropdown.atum-select2-dropdown .select2-results__options::-webkit-scrollbar {
   background-color: transparent;
   border: none;
   width: 7px;
 }
-body .select2-dropdown.atum-select2-dropdown .select2-results__options::-webkit-scrollbar-track {
+body span.select2-dropdown.atum-select2-dropdown .select2-results__options::-webkit-scrollbar-track {
   background-color: transparent;
   border: none;
 }
-body .select2-dropdown.atum-select2-dropdown .select2-results__options::-webkit-scrollbar-thumb {
+body span.select2-dropdown.atum-select2-dropdown .select2-results__options::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: var(--gray-500);
 }
-body .select2-dropdown.atum-select2-dropdown .select2-results__option {
+body span.select2-dropdown.atum-select2-dropdown .select2-results__option {
   padding: 6px;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -506,10 +506,10 @@ body .select2-dropdown.atum-select2-dropdown .select2-results__option {
   color: var(--atum-text-color-var3);
   font-size: 12px;
 }
-body .select2-dropdown.atum-select2-dropdown .select2-results__option:focus {
+body span.select2-dropdown.atum-select2-dropdown .select2-results__option:focus {
   outline: none;
 }
-body .select2-dropdown.atum-select2-dropdown .select2-results__option[aria-selected] {
+body span.select2-dropdown.atum-select2-dropdown .select2-results__option[aria-selected] {
   cursor: pointer;
 }
 body .select2-container--open .select2-dropdown.atum-select2-dropdown {
@@ -763,7 +763,7 @@ body .select2-container--default .select2-dropdown.atum-select2-dropdown .select
 }
 body .select2-container--default .select2-dropdown.atum-select2-dropdown .select2-results__option--highlighted {
   color: var(--white) !important;
-  background-color: var(--atum-menu-text-highlight);
+  background-color: var(--atum-menu-text-highlight) !important;
 }
 body .select2-container--default .select2-dropdown.atum-select2-dropdown .select2-results__option[role=group] {
   padding: 0;
@@ -2995,6 +2995,11 @@ input[type=button].btn-block {
     margin-top: 0;
     margin-bottom: 0;
   }
+}
+.wrap h1.wp-heading-inline .spacer {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .atum-help-tip {
@@ -5972,22 +5977,18 @@ table.wp-list-table .column-groups th.actions, .floatThead-container .column-gro
 
 .btn.btn-warning:hover {
   background-color: var(--secondary-hover);
-  border-radius: 5px;
 }
 
 .btn.btn-primary:hover {
   background-color: var(--primary-hover);
-  border-radius: 5px;
 }
 
 .btn.btn-success:hover {
   background-color: var(--tertiary-hover);
-  border-radius: 5px;
 }
 
 .btn.btn-danger:hover {
   background-color: var(--danger-hover);
-  border-radius: 5px;
 }
 
 .popover .popover-body > input[type=number], .popover .popover-body > input[type=text], .popover .popover-body > .button {
