--- a/assets/css/atum-product-data.css
+++ b/assets/css/atum-product-data.css
@@ -3056,9 +3056,9 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
   display: flex;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   width: 100%;
 }
 .input-group > .form-control,
@@ -3069,6 +3069,7 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   width: 1%;
+  min-width: 0;
   margin-bottom: 0;
 }
 .input-group > .form-control:focus,
@@ -3117,10 +3118,10 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
   z-index: 0;
 }
 .input-group > .select2-container.atum-select2 .select2-selection--single, .input-group > .select2-container.atum-enhanced-select .select2-selection--single {
-  border-bottom-left-radius: 0;
   border-top-left-radius: 0;
-  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 0;
   border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .input-group.invalid input[type=text], .input-group.invalid input[type=number], .input-group.invalid textarea, .input-group.invalid select, .input-group.invalid .select2-container {
   background-color: rgba(255, 72, 72, 0.15);
@@ -3247,8 +3248,8 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
 }
 .input-group.number-mask .input-group-append .input-group-text {
   background-color: #e9ecef;
-  border-top-right-radius: 3px !important;
-  border-bottom-right-radius: 3px !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
 }
@@ -3295,7 +3296,6 @@ input.form-check-input[disabled] ~ .form-check-label, input.form-check-input:dis
 }
 .product_data .atum-field .input-group-text {
   padding: 4px 7px;
-  height: 20px;
 }
 @media all and (max-width: 782px) {
   .product_data .atum-field .input-group-text {
