--- a/assets/css/atum-search-orders.css
+++ b/assets/css/atum-search-orders.css
@@ -1074,9 +1074,9 @@ input[type=button].btn-block {
   display: flex;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   width: 100%;
 }
 .input-group > .form-control,
@@ -1087,6 +1087,7 @@ input[type=button].btn-block {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   width: 1%;
+  min-width: 0;
   margin-bottom: 0;
 }
 .input-group > .form-control:focus,
@@ -1135,10 +1136,10 @@ input[type=button].btn-block {
   z-index: 0;
 }
 .input-group > .select2-container.atum-select2 .select2-selection--single, .input-group > .select2-container.atum-enhanced-select .select2-selection--single {
-  border-bottom-left-radius: 0;
   border-top-left-radius: 0;
-  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 0;
   border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .input-group.invalid input[type=text], .input-group.invalid input[type=number], .input-group.invalid textarea, .input-group.invalid select, .input-group.invalid .select2-container {
   background-color: rgba(255, 72, 72, 0.15);
@@ -1265,8 +1266,8 @@ input[type=button].btn-block {
 }
 .input-group.number-mask .input-group-append .input-group-text {
   background-color: #e9ecef;
-  border-top-right-radius: 3px !important;
-  border-bottom-right-radius: 3px !important;
+  border-top-right-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
 }
