--- a/assets/scss/atoms/_form-check.scss
+++ b/assets/scss/atoms/_form-check.scss
@@ -15,7 +15,7 @@ input.form-check-input {
 	background-size: contain;
 	border: $form-check-input-border;
 	appearance: none;
-	color-adjust: exact; // Keep themed appearance for print
+	print-color-adjust: exact; // Keep themed appearance for print
 	transition: $form-check-transition;
 	
 	&[type="checkbox"] {
