--- a/assets/scss/organisms/pages/_settings.scss
+++ b/assets/scss/organisms/pages/_settings.scss
@@ -653,6 +653,7 @@
 					margin-top: 5px;
 					font-weight: normal;
 					font-size: 10px;
+					cursor: default;
 					
 					&-secondary {
 						background-color: var(--atum-text-color-var1);
