--- a/assets/css/atum-list.css
+++ b/assets/css/atum-list.css
@@ -3871,7 +3871,7 @@ body.running-atum-help-guide .atum-help-marker.active:before, body.running-atum-
 }
 
 .bs-popover-end > .popover-arrow, .bs-popover-auto[data-popper-placement^=right] > .popover-arrow {
-  left: calc(-0.5rem - 1px);
+  left: calc(-1rem + 1px);
   width: 0.5rem;
   height: 1rem;
 }
