--- a/assets/scss/rtl/atum-list-rtl.scss
+++ b/assets/scss/rtl/atum-list-rtl.scss
@@ -3,6 +3,7 @@
 //------------------
 @import "../common/functions";
 @import "../common/variables";
+@import "../common/mixins";
 
 @import "atoms/select2-rtl";
 @import "atoms/page-title-rtl";
