--- a/assets/scss/molecules/_trial-modal.scss
+++ b/assets/scss/molecules/_trial-modal.scss
@@ -12,11 +12,11 @@
 		margin-top: -10px;
 	}
 	
-	.swal2-container, .swal2-content {
+	.swal2-container, .swal2-html-container {
 		margin-bottom: 0;
 	}
 	
-	.swal2-content {
+	.swal2-html-container {
 		p {
 			font-size: 18px;
 			color: $gray-600;
