--- a/assets/scss/molecules/_atum-modals.scss
+++ b/assets/scss/molecules/_atum-modals.scss
@@ -11,46 +11,21 @@
 		background-color: var(--atum-table-bg);
 	}
 	
-	.swal2-header {
-		align-items: flex-start;
-		
-		h2.swal2-title small {
-			color: var(--atum-table-link-text);
-		}
-	}
-	
-	.swal2-actions {
-		justify-content: flex-end;
-		padding-right: 0;
-		margin-top: 0;
+	h2.swal2-title small {
+		color: var(--atum-table-link-text);
 	}
 	
 	.swal2-title {
 		color: var(--atum-text-modal-title);
 		font-size: 18px;
 		text-align: left;
-		margin-bottom: 0;
 	}
 	
-	.swal2-content {
+	.swal2-html-container {
+		margin-top: 0;
+		margin-left: 1.1em;
+		margin-right: 1.1em;
 		z-index: unset;
-		
-		.files-modal-header {
-			color: var(--atum-table-link-text);
-			
-			.inventory-file-upload {
-				color: var(--atum-text-color-var3);
-			}
-			
-			#inventory-file-span {
-				background-color: var(--atum-table-bg)!important;
-				border: 1px solid #8c8f94;
-			}
-		}
-		
-		.files-modal-body {
-			color: var(--atum-text-modal-title);
-		}
 	}
 	
 	.atum-modal-content {
@@ -60,15 +35,15 @@
 		.note {
 			text-align: left;
 			font-size: 12px;
-			color: var(--atum-table-link-text)!important;
+			color: var(--atum-table-link-text);
 			margin-bottom: math.div($grid-gutter-width, 2);
 		}
 		
 		hr {
 			border-top-color: $gray-400;
 			border-bottom: none;
-			margin-left: -20px;
-			margin-right: -20px;
+			margin-left: -1.1em;
+			margin-right: -1.1em;
 		}
 		
 		input[type=text], input[type=email], input[type=search] {
@@ -81,27 +56,13 @@
 			color: var(--atum-text-color-var3);
 			border-color: var(--main-border-alt);
 			
-			&::-moz-placeholder {
-				text-align: left;
-				font-style: italic;
-				font-size: 12px;
-				opacity: 1; // Override Firefox's unusual default opacity
-				color: var(--atum-table-link-text);
-			}
-			
-			&:-ms-input-placeholder {
+			@include placeholder {
 				text-align: left;
 				font-size: 12px;
 				font-style: italic;
 				color: var(--atum-table-link-text);
 			}
 			
-			&::-webkit-input-placeholder  {
-				text-align: left;
-				font-size: 12px;
-				font-style: italic;
-				color: var(--atum-table-link-text);
-			}
 		}
 		
 		form {
@@ -186,6 +147,7 @@
 					.select2-selection--multiple {
 						background-color: var(--atum-table-bg);
 						border-color: var(--main-border-alt);
+						
 						.select2-selection__rendered {
 							padding-left: 10px;
 							padding-right: 10px;
@@ -213,18 +175,15 @@
 		float: right;
 	}
 	
-	.swal2-actions {
+	div.swal2-actions {
+		width: 100%;
+		display: flex;
+		justify-content: flex-end;
 		border-top: 1px solid $gray-400;
-		margin-left: -20px;
-		margin-right: -20px;
-		width: auto;
+		margin-top: 0;
 		padding-right: 20px;
+		padding-left: 20px;
 		padding-top: 10px;
-		
-		button.swal2-confirm.swal2-styled {
-			background-color: var(--success)!important;
-			color: var(--wp-yiq-text-light);
-		}
 	}
 	
 	.swal2-validation-message {
