--- a/assets/scss/molecules/_marketing-popup.scss
+++ b/assets/scss/molecules/_marketing-popup.scss
@@ -18,7 +18,7 @@
 			z-index: 10;
 		}
 		
-		.swal2-content {
+		.swal2-html-container {
 			font-size: 14px;
 			line-height: 1.29;
 			text-align: center;
@@ -112,9 +112,11 @@
 			}
 			
 		}
-		.swal2-title, .swal2-content {
+		
+		.swal2-title, .swal2-html-container {
 			margin-bottom: 0;
 		}
+		
 		.swal2-confirm {
 			margin-right: 10px;
 		}
