--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -837,7 +837,7 @@ html {
 // Auto-Installer.
 .auto-installer-modal {
 	
-	.swal2-content {
+	.swal2-html-container {
 		margin-bottom: math.div($grid-gutter-width, 2);
 	}
 	
