--- a/assets/scss/organisms/pages/_settings.scss
+++ b/assets/scss/organisms/pages/_settings.scss
@@ -552,7 +552,7 @@
 			.swal2-container {
 				z-index: 100000;
 				
-				.swal2-content, .swal2-title {
+				.swal2-html-container, .swal2-title {
 					margin-bottom: $grid-gutter-width;
 				}
 				
@@ -830,7 +830,10 @@
 								
 								.select2-search__field {
 									width: inherit !important;
-									@include placeholder($wp-gray-1);
+									
+									@include placeholder {
+										color: $wp-gray-1;
+									}
 									
 									@include mobile-max {
 										width: 100% !important;
@@ -1318,7 +1321,7 @@ input[type=search] {
 .swal2-container {
 	z-index: 100000;
 	
-	.swal2-content, .swal2-title {
+	.swal2-html-container, .swal2-title {
 		margin-bottom: $grid-gutter-width;
 	}
 	
